Add more specs
